--- a/src/styles/global/home.scss
+++ b/src/styles/global/home.scss
@@ -5,6 +5,14 @@
     flex-direction: column;
     height: auto;
     width:100%;
+    div{
+        ul  {
+            li{
+                color: #fff;
+            }
+        }
+    }
+    
 }
 
 
