--- a/src/styles/utilities/variables.scss
+++ b/src/styles/utilities/variables.scss
@@ -6,6 +6,7 @@ $color-purple-light:rgba(107, 99, 181, 0.6);
 $color-slytherin:linear-gradient(135deg, #1C792B 0%, #82E95E 100%);
 $color-ravenclaw:linear-gradient(135deg, #0597B7 0%, #66D1FF 100%);
 $color-hufflepuff:linear-gradient(135deg, #FFC700 0%, #FFF388 100%);
+$color-gryffindor:linear-gradient(135deg, #FF0000 0%, #FED482 100%);
 
 
 
