--- a/src/styles/global/filtro.scss
+++ b/src/styles/global/filtro.scss
@@ -4,8 +4,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 40px;
-    
+    margin-top: 30px;
+   
     h2 {
         color: $color-white;
         padding: 7px;
@@ -15,8 +15,14 @@
         display: flex;
         justify-content: center;
         width: 100%;
-        .btn-filter-normal {
-            margin: 0.5rem;
-        }
+        gap:117px;
+        margin-top: 24px;
+        
+    }
+}
+
+@include breakpoint(medium) {
+    .filtro{
+        
     }
 }
