--- a/src/styles/global/menuFavoritos.scss
+++ b/src/styles/global/menuFavoritos.scss
@@ -1,8 +1,11 @@
-.menuFav{
-    /*display: flex;*/
+.hidenFav{
     display: none;
+}
+.menuFav{
+    display: flex;
+    /*display: none;*/
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: flex-end;
     width: 290px;
     height: 340px;
     color: $color-white;
@@ -20,8 +23,12 @@
         justify-content: space-between;
         align-items: center;
         padding: 10px 20px;
-        img{
-            max-width: 38px;
+        .fav-img{
+            width: 38px;
+            height: 38px;
+            border-radius: 50px;
+            background-repeat: no-repeat;
+            background-size: cover;
         }
         .btn-trash{
             cursor: pointer;
@@ -30,19 +37,20 @@
     hr{
         background-color: $color-purpleDark;
         border:1px solid $color-purpleDark;
-        width: 90%;
+        width: 100%;
         padding:0 10px;
-        align-self: center;
     }
 }
 
 @include breakpoint(medium) {
     .menuFav{
-        justify-content: flex-end;
+        justify-content: flex-start;
         border-bottom-left-radius: 10px;
         border-bottom-right-radius: 10px;
         top:0;
-        padding-bottom: 0px;
+        padding-top: 50px;
         width: 270px;
+        .item-fav{
+        }
     }
 }
