--- a/src/styles/global/modal.scss
+++ b/src/styles/global/modal.scss
@@ -1,6 +1,9 @@
-.modal{
-    /*display: flex;*/
+.hidenModal{
     display: none;
+}
+.modal{
+    background-color: aqua;
+    display: flex;
     position: fixed;
     z-index:999;
     top:0;
@@ -22,6 +25,9 @@
             display: flex;
             width: 100%;
             justify-content: space-between;
+            .btnClose{
+                cursor: pointer;
+            }
         }
     }
 }
