Se termina funcionalidad favoritos

--- a/src/styles/global/cards.scss
+++ b/src/styles/global/cards.scss
@@ -5,6 +5,7 @@
     padding: 5px;
     width: 80%;
     gap:12px ;
+    margin-top: 46px;
     .Slytherin{
         background: $color-slytherin;
     }
@@ -25,7 +26,7 @@
     
     .card {
         background-color: $color-white;
-        width: 180px;
+        width: 140px;
         height: auto;
         border-radius: 10px;
         margin-bottom: 5px;
@@ -78,10 +79,9 @@
                 font-style: normal;
                 font-weight: 600;
                 font-size: 18px;
-                line-height: 46px;
                 text-align: center;
                 color: #081F32;
-                
+                margin-top: 10px;
             }
             .info-personaje{
                 display: none;
@@ -118,7 +118,7 @@
                 justify-content: space-evenly;
                 padding: 1rem;
                 .status-card {
-                   
+                    padding: 0px;
                     .status {
                         flex-direction: row;
                         font-size: 14px;
@@ -133,6 +133,7 @@
                     line-height: 46px;
                     text-align: left;
                     width: 100%;
+                    margin-top: 0px;
                 }
                 .info-personaje{
                     display: flex;
