--- a/src/styles/global/menuFavoritos.scss
+++ b/src/styles/global/menuFavoritos.scss
@@ -7,7 +7,9 @@
     flex-direction: column;
     justify-content: flex-end;
     width: 290px;
-    height: 340px;
+    height: auto;
+    min-height: 30px;
+    max-height: 350px;
     color: $color-white;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
@@ -48,6 +50,7 @@
         border-bottom-left-radius: 10px;
         border-bottom-right-radius: 10px;
         top:0;
+        bottom: null;
         padding-top: 50px;
         width: 270px;
         .item-fav{
