Se realizaron testing

--- a/src/styles/global/filtro.scss
+++ b/src/styles/global/filtro.scss
@@ -28,6 +28,10 @@
             .btn-filter-normal{
                 width: 288px;
                 height: 67px;
+                }
+            .btn-filter-active {
+                width: 288px;
+                height: 67px;
             }
         }
     }
