--- a/src/styles/global/home.scss
+++ b/src/styles/global/home.scss
@@ -12,6 +12,14 @@
             }
         }
     }
+    .warning{
+       color: red;
+       font-size: 25px;
+       margin-top: 100px;
+       background-color: rgb(225, 254, 34);
+       border:1px solid #fff;
+       padding: 10px;
+    }
     
 }
 
