--- a/src/styles/global/menuFavoritos.scss
+++ b/src/styles/global/menuFavoritos.scss
@@ -3,7 +3,6 @@
 }
 .menuFav{
     display: flex;
-    /*display: none;*/
     flex-direction: column;
     justify-content: flex-end;
     width: 290px;
@@ -42,6 +41,12 @@
         width: 100%;
         padding:0 10px;
     }
+
+    .empty-fav{
+        font-size:14px ;
+        text-align: center;
+        padding: 10px;
+    }
 }
 
 @include breakpoint(medium) {
@@ -50,10 +55,8 @@
         border-bottom-left-radius: 10px;
         border-bottom-right-radius: 10px;
         top:0;
-        bottom: null;
         padding-top: 50px;
         width: 270px;
-        .item-fav{
-        }
+       
     }
 }
